sample_project/tmp/test_output.txt
> Task :clean
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
2 actionable tasks: 2 executed
/Users/daviddandeneau/Projects/test_driven/sample_project/src/test/java/org/example/OpenRTBTest.java:9: error: cannot find symbol
    private OpenRTB openRTB;
            ^
  symbol:   class OpenRTB
  location: class OpenRTBTest
/Users/daviddandeneau/Projects/test_driven/sample_project/src/test/java/org/example/OpenRTBTest.java:69: error: cannot find symbol
        this.openRTB = new OpenRTB();
                           ^
  symbol:   class OpenRTB
  location: class OpenRTBTest
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 452ms
